--- a/web/META-INF/Web-INF/index.html
+++ b/web/META-INF/Web-INF/index.html
@@ -2,9 +2,12 @@
 <!--
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit this template
+Prueba de guardado de Web-Inf
 -->
+
 <html>
     <head>
+        
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
