"Se modifico el backgroud para hacerlo responsivo"

--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
             }
         </style>
     </head>
-    <body background="Ssur.jpg">
+    <body>
 
         <h1 class="headier">
             <img src="UCR_LOGO.png" alt="Texto alternativo de la imagen" class="UCR-img"> Universidad de Costa Rica. Servicio de hospedajes para profesores.
