--- a/web/index.html
+++ b/web/index.html
@@ -63,7 +63,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                     </form>
                 </li> 
                 <li>
-                    <form method="post" action="reservar.html">
+                    <form method="post" action="ReservacionActiva.html">
 
                         <button type="submit" class="btn btn-dark">Reservaciones activas</button>
 
