"Intento de documentación"

--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 -->
 <html>
     <head>
+        <!-- This is the principal page -->
         <title>Hospedaje UCR</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
