--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 <html>
     <head>
         <!-- This is the principal page -->
-        <title>Hospedaje UCR</title>
+        <title>Hospedaje UCR</title> <!-- Title of the webpage -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="CSS.css" rel="stylesheet" type="text/css"/>
@@ -64,7 +64,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                     </form>
                 </li> 
                 <li>
-                    <form method="post" action="ReservacionActiva.html">
+                    <form method="post" action="activeReservation.html">
 
                         <button type="submit" class="btn btn-dark">Reservaciones activas</button>
 
