"Dilan añadió estructuras de danos y nuevas funcionalidades al sistema "

--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                 width: 125px;
                 height: auto;
             }
+            .btn{
+                width: 200px;
+                
+            }
         </style>
     </head>
     <body>
@@ -47,7 +51,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 
                 <span> &#9776;</span>
             </div>
-            <ul>
+            <ul class="">
                 <li>  <img src="UCR_LOGO_NEGRO.png" alt=""/> </li>
                 <li>
                     <form method="post" action="reservar.html">
@@ -57,23 +61,23 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                     </form>
                 </li> 
                 <li>
-                    <form method="post" action="reservar.html">
+                    <form method="post" action="Reservations.jsp">
 
                         <button type="submit" class="btn btn-dark">Reservaciones</button>
 
                     </form>
                 </li> 
                 <li>
-                    <form method="post" action="activeReservation.html">
+                    <form method="post" action="ReservationsHistory.jsp">
 
-                        <button type="submit" class="btn btn-dark">Reservaciones activas</button>
+                        <button type="submit" class="btn btn-dark">Historial de reservaciones</button>
 
                     </form>
                 </li> 
                 <li>
                     <form method="post" action="reservar.html">
 
-                        <button type="submit" class="btn btn-dark">Usuarios activos</button>
+                        <button type="submit" class="btn btn-dark">Reservaciones activas</button>
 
                     </form>
                 </li>
