"Se implemento el historial de reservaciones y mejoras de funcionalidas y el cambio de estado"

--- a/web/index.html
+++ b/web/index.html
@@ -75,9 +75,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                     </form>
                 </li> 
                 <li>
-                    <form method="post" action="reservar.html">
+                    <form method="post" action="ReservationsInProcess">
 
-                        <button type="submit" class="btn btn-dark">Reservaciones activas</button>
+                        <button type="submit" class="btn btn-dark">Reservaciones en proceso</button>
 
                     </form>
                 </li>
